crates/core/tests/proc/fn/attr_extern_c.rs
use interoptopus::ffi_function;

#[ffi_function]
extern "C" fn foo() {}

#[allow(dead_code)]
fn main() {}
